syntax = "proto3";

package telemetry.service.hubrouter;

import "google/protobuf/empty.proto";
import "telemetry/message/event/hub_event.proto";

option java_package = "ru.yandex.practicum.grpc.telemetry.service.hubrouter";

service HubRouterController {
  rpc handleDeviceAction (message.event.DeviceActionRequestProto)
      returns (google.protobuf.Empty);
}